--- a/style.css
+++ b/style.css
@@ -2,24 +2,23 @@ h1 {
     color: rgb(28, 23, 34);
     text-align: center;
     line-height: 1em;
-    font: 150px Arial, sans-serif;
+    font: 80px Arial, sans-serif;
 }
 
 h2 {
     text-align: center;
-    font: 43px Arial;
+    font: 30px Arial;
 }
 
 
 #emoji img{
     height: 100px;
-    padding-left: 30px ;
+    padding-left: 30px;
     padding-right: 30px;
     cursor: pointer;
 }
 
- #emoji img:hover{
-   
+#emoji img:hover{
     height: 15em;
  }
 
@@ -29,12 +28,12 @@ h2 {
     text-align: center;
 }
 #cocktail{
-    /* background-color: rgb(48, 54, 40); */
     padding: 100px 50px 100px 50px;
     white-space: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
-  }
+}
+
 #cocktail img {
     display: inline-flex;
     overflow: scroll;
@@ -42,29 +41,82 @@ h2 {
     margin-right: 3rem;
     width: fit-content;
     cursor: pointer;
-  }
+}
+
 #cocktail img:last-child {
     margin-right: 0;
-  }
+}
+
 #description{
     /* background-color: rgb(48, 54, 40); */
     padding: 100px 50px 100px 50px;
     text-align: center;
     display: center;
     font: 35px Arial, sans-serif;
-  }
+    font-weight: bold;
+}
+
 #description img {
     display: center;
-    height: 400px;
-  }
+    height: 275px;
+    margin
+}
 
 .hidden {
     visibility: hidden;
 }
 
+#container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background: #eee;
+    margin: 10px auto;
+    position: relative;
+    text-align:center;
+}
+
 .align {
-    display: inline-block;
+    background: green;
+    height: 400px;
+    width: 300px;
+    margin: 25px;
+    /* display: inline-block;
+    padding: 50px 50px 50px 50px; */
     /* background-color: rgb(48, 54, 40); */
 }
 
+img {
+  height: 300px;
+}
 
+/*added new div tag*/
+#dragndrop {
+  padding: 100px 20px 100px 20px;
+}
+
+#dragndrop img {
+  display: center;
+  height: 250px;
+}
+
+#feed-emoji {
+  display: center;
+  text-align: center;
+  padding: 100px 50px 100px 50px;
+}
+
+#feed-emoji img {
+  display: center;
+  height: 250px;
+}
+
+#drink {
+  cursor: grab;
+}
+
+/* #ecstatic {
+  display: center;
+  text-align: center;
+  height: 300px;
+} */
